# salzweissen

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: build.yml
src/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: ImpulseGenerator.h  MangroveVoice.h  ParameterSmoother.h  SalzwiesenVoice.h  SineWaveshaper.h  TriangleOscillator.h
src/ui/: MangroveLookAndFeel.cpp  MangroveLookAndFeel.h  SalzwiesenLookAndFeel.cpp  SalzwiesenLookAndFeel.h
test/: PluginTests.cpp
test/dsp/: DSPTests.cpp
